--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0158.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0158.html
@@ -392,8 +392,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1164 609 1172 624">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">’</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1186 612 1398 665" lang="grc">
@@ -577,9 +576,14 @@
             <ins class="alt" title="nlp 1.00">λέγοντες</ins>
           </span>
         </span>
-        <span id="w_110" class="ocr_word" title="bbox 1268 818 1380 874">
+        <span id="w_110_0" class="ocr_word" title="bbox 1268 818 1380 874">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;δεῖν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;δεἰν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_110_1" class="ocr_word" title="bbox 1268 818 1380 874">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1413 818 1608 873" lang="grc">
@@ -600,11 +604,6 @@
         <span id="w_114" class="ocr_word" title="bbox 1872 834 1918 858" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_115" class="ocr_word" title="bbox 1940 831 2085 871" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φυσικὰ</ins>
           </span>
         </span>
       </span>
@@ -1479,9 +1478,14 @@
             <ins class="alt" title="nlp 1.00">ἄρχεσθαι</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 2058 1924 2144 1961">
+        <span id="w_289_0" class="ocr_word" title="bbox 2058 1924 2144 1961">
           <span class="alternatives">
-            <ins title="nlp 2.00">226ν</ins>
+            <ins class="alt" title="nlp 2.00">226</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 2058 1924 2144 1961">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -2330,14 +2334,14 @@
         </span>
         <span id="w_452" class="ocr_word" title="bbox 2052 2873 2147 2916">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὰ δὲ &amp;x003C;ἄλλα</ins>
+            <ins title="nlp 2.00">ἄλλα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 329 2925 2146 2978">
         <span id="w_453" class="ocr_word" title="bbox 329 2925 493 2971" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">μᾶλλον;&amp;x003E;?</ins>
+            <ins title="nlp 2.00">x003E;?</ins>
           </span>
         </span>
         <span id="w_454" class="ocr_word" title="bbox 641 2927 680 2960">
