--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0202.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0202.html
@@ -816,16 +816,11 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 2004 1027 2084 1053" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συν-</ins>
+            <ins title="nlp 2.00">συνθέτου,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 402 1080 2083 1138">
-        <span id="w_156" class="ocr_word" title="bbox 402 1088 531 1133" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θέτου,</ins>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 565 1100 699 1138" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
@@ -1758,7 +1753,7 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 2013 2136 2083 2175" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ γὰρ</ins>
+            <ins title="nlp 2.00">ὁ γὰρ</ins>
           </span>
         </span>
       </span>
