--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0085.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0085.html
@@ -1311,8 +1311,7 @@
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1083 2888 1148 2911">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1176 2878 1207 2911">
@@ -1350,8 +1349,7 @@
       <span class="ocr_line" title="bbox 90 2930 1904 2986">
         <span id="w_255" class="ocr_word" title="bbox 90 2941 325 2976">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’jvTa</ins>
-            <del title="nlp 0.90">’jvTa</del>
+            <ins title="nlp 2.00">ἀποδεικνύντα</ins>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 361 2954 392 2975" lang="grc">
@@ -1443,14 +1441,12 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 571 3002 658 3043">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">opoJv</ins>
-            <del title="nlp 0.90">opoJv</del>
+            <ins title="nlp 2.00">ὁρὼν</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 692 3009 740 3033">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tt?</ins>
-            <del title="nlp 0.90">Tt?</del>
+            <ins title="nlp 2.00">τις</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 774 2996 802 3029">
@@ -1466,8 +1462,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1048 2994 1259 3040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’Cfilt-LOLi</ins>
-            <del title="nlp 0.90">’Cfilt-LOLi</del>
+            <ins title="nlp 2.00">ἐπαγγέλεται</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1294 2994 1319 3027">
@@ -1538,8 +1533,7 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 235 3118 265 3149">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 424 3117 468 3149">
@@ -1580,12 +1574,12 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 978 3124 1023 3147" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">an Οὐ πρέπει</ins>
+            <ins title="nlp 2.00">Οὐ πρέπει</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1247 3111 1374 3156" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;φασίν&amp;x003E;?</ins>
+            <ins title="nlp 2.00">x003E;?</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1554 3108 1593 3141">
