--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0115.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0115.html
@@ -68,17 +68,21 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 829 394 1146 454">
-        <span id="w_10" class="ocr_word" title="bbox 829 397 1019 452">
+        <span id="w_10_0" class="ocr_word" title="bbox 829 397 1019 452">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κζ΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 829 397 1019 452">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κζ'&amp;003E;.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 149 525 1882 584">
         <span id="w_12" class="ocr_word" title="bbox 149 551 182 584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 202 539 280 581">
@@ -121,9 +125,9 @@
             <ins class="alt" title="nlp 2.00">διαιροῦντας</ins>
           </span>
         </span>
-        <span id="w_20_1" class="ocr_word" title="bbox 1560 529 1796 580">
+        <span id="w_20_1_0" class="ocr_word" title="bbox 1560 529 1796 580">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">79ν</ins>
+            <ins class="alt" title="nlp 2.00">79v</ins>
           </span>
         </span>
       </span>
@@ -1583,14 +1587,14 @@
             <ins class="alt" title="nlp 1.00">ὑπόκειται</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1538 2354 1635 2407" lang="grc">
+        <span id="w_302_0" class="ocr_word" title="bbox 1538 2354 1635 2407">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῖς</ins>
+            <ins class="alt" title="nlp 2.00">(τοῖς</ins>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 1667 2369 1819 2406" lang="grc">
+        <span id="w_302_1" class="ocr_word" title="bbox 1538 2354 1635 2407">
           <span class="alternatives">
-            <ins title="nlp 2.00">γενικωτάτοις</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1620,9 +1624,14 @@
             <ins title="nlp 2.00">κατηγορεῖται</ins>
           </span>
         </span>
-        <span id="w_310" class="ocr_word" title="bbox 1119 2422 1399 2474" lang="grc">
+        <span id="w_310_0" class="ocr_word" title="bbox 1119 2422 1399 2474">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἰδικωτάτων</ins>
+            <ins class="alt" title="nlp 2.00">(εἰδικωτάτων</ins>
+          </span>
+        </span>
+        <span id="w_310_1" class="ocr_word" title="bbox 1119 2422 1399 2474">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1431 2423 1500 2475" lang="grc">
@@ -1633,11 +1642,6 @@
         <span id="w_312" class="ocr_word" title="bbox 1533 2439 1596 2462" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_313" class="ocr_word" title="bbox 1628 2423 1819 2475" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀτόμων),</ins>
           </span>
         </span>
       </span>
@@ -1911,7 +1915,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 827 2884 849 2915" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">4 συνερεὶν</ins>
+            <ins title="nlp 2.00">συνερεὶν</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1048 2882 1079 2913">
@@ -2064,9 +2068,14 @@
             <ins class="alt" title="nlp 1.00">Δία</ins>
           </span>
         </span>
-        <span id="w_394" class="ocr_word" title="bbox 1150 2999 1185 3043">
+        <span id="w_394_0" class="ocr_word" title="bbox 1150 2999 1185 3043">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἡ ἀρχή&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἡ</ins>
+          </span>
+        </span>
+        <span id="w_394_1" class="ocr_word" title="bbox 1150 2999 1185 3043">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀρχή&amp;x003E;?</ins>
           </span>
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1531 3002 1682 3030" lang="grc">
@@ -2104,7 +2113,7 @@
         </span>
         <span id="w_402" class="ocr_word" title="bbox 518 3056 604 3090" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">201: ἀτόμων</ins>
+            <ins title="nlp 2.00">ἀτόμων</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 797 3058 821 3090">
@@ -2134,7 +2143,7 @@
         </span>
         <span id="w_408" class="ocr_word" title="bbox 1258 3058 1296 3090" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">17 δεκάδα Marc.</ins>
+            <ins title="nlp 2.00">δεκάδα Marc.</ins>
           </span>
         </span>
         <span id="w_409" class="ocr_word" title="bbox 1601 3056 1684 3089">
