--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0026.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0026.html
@@ -169,17 +169,11 @@
         </span>
         <span title="bbox 2097 285 2156 326" class="ocr_word" id="w_26">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">in-</ins>
+            <ins title="nlp 2.00">incipiunt</ins>
           </span>
         </span>
       </span>
       <span title="bbox 335 353 2153 416" class="ocr_line">
-        <span title="bbox 335 362 497 416" class="ocr_word" id="w_27">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">cipiunt</ins>
-            <del title="nlp 0.90">incipiunt</del>
-          </span>
-        </span>
         <span title="bbox 534 375 560 402" class="ocr_word" id="w_28">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">a</ins>
@@ -459,12 +453,7 @@
         </span>
         <span lang="grc" title="bbox 1675 645 1771 669" class="ocr_word" id="w_77">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">εἶναι</ins>
-          </span>
-        </span>
-        <span title="bbox 1786 662 1794 682" class="ocr_word" id="w_78">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00" class="alt">εἶναι,</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1840 646 1967 673" class="ocr_word" id="w_79">
@@ -479,9 +468,14 @@
         </span>
       </span>
       <span title="bbox 330 699 2154 758" class="ocr_line">
-        <span lang="grc" title="bbox 330 704 614 758" class="ocr_word" id="w_81">
+        <span id="w_81_0" class="ocr_word" title="bbox 330 704 614 758">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἰληφότες?),</ins>
+            <ins class="alt" title="nlp 2.00">(εἰληφότες?)</ins>
+          </span>
+        </span>
+        <span id="w_81_1" class="ocr_word" title="bbox 330 704 614 758">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 652 704 782 757" class="ocr_word" id="w_82">
@@ -522,11 +516,6 @@
         <span lang="grc" title="bbox 1909 714 1972 738" class="ocr_word" id="w_89">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τὸν</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 2011 712 2154 740" class="ocr_word" id="w_90">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">σκοπὸν</ins>
           </span>
         </span>
       </span>
@@ -943,17 +932,11 @@
         </span>
         <span title="bbox 1970 1182 2154 1235" class="ocr_word" id="w_158">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">quaesti-</ins>
+            <ins title="nlp 2.00">quaestionem</ins>
           </span>
         </span>
       </span>
       <span title="bbox 333 1249 2153 1304" class="ocr_line">
-        <span title="bbox 333 1264 456 1293" class="ocr_word" id="w_159">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">onem</ins>
-            <del title="nlp 0.90">quaestionem</del>
-          </span>
-        </span>
         <span title="bbox 503 1251 558 1292" class="ocr_word" id="w_160">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">ad</ins>
@@ -1129,8 +1112,7 @@
         </span>
         <span title="bbox 542 1456 717 1507" class="ocr_word" id="w_188">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">XLIIIj.</ins>
-            <del title="nlp 0.90">XLIIIj.</del>
+            <ins title="nlp 2.00">XLIII).</ins>
           </span>
         </span>
         <span title="bbox 779 1469 890 1497" class="ocr_word" id="w_189">
@@ -1185,8 +1167,7 @@
       <span title="bbox 334 1524 1036 1567" class="ocr_line">
         <span title="bbox 334 1529 525 1566" class="ocr_word" id="w_197">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">uostram</ins>
-            <del title="nlp 0.90">uostram</del>
+            <ins title="nlp 2.00">nostram</ins>
           </span>
         </span>
         <span title="bbox 554 1524 814 1566" class="ocr_word" id="w_198">
@@ -1744,7 +1725,7 @@
         </span>
         <span title="bbox 859 2280 932 2321" class="ocr_word" id="w_302">
           <span class="alternatives">
-            <ins title="nlp 2.00">21ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span title="bbox 1354 2284 1462 2326" class="ocr_word" id="w_303">
@@ -1801,7 +1782,7 @@
         </span>
         <span lang="grc" title="bbox 775 2348 1013 2403" class="ocr_word" id="w_312">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ζητητέον)·</ins>
+            <ins title="nlp 2.00">(ζητητέον)·</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1057 2365 1092 2389" class="ocr_word" id="w_313">
@@ -2062,9 +2043,14 @@
             <ins title="nlp 1.00" class="alt">ποίους</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 988 2622 1198 2677" class="ocr_word" id="w_364">
+        <span id="w_364_0" class="ocr_word" title="bbox 988 2622 1198 2677">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πόσους?)</ins>
+            <ins class="alt" title="nlp 2.00">(πόσους?)</ins>
+          </span>
+        </span>
+        <span id="w_364_1" class="ocr_word" title="bbox 988 2622 1198 2677">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1268 2641 1448 2679" class="ocr_word" id="w_365">
@@ -2090,11 +2076,6 @@
         <span lang="grc" title="bbox 1952 2633 2044 2684" class="ocr_word" id="w_369">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">δόξῃ</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 2078 2646 2144 2670" class="ocr_word" id="w_370">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -2426,17 +2407,11 @@
         </span>
         <span title="bbox 2047 3111 2140 3152" class="ocr_word" id="w_429">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">reli-</ins>
+            <ins title="nlp 2.00">reliquorum</ins>
           </span>
         </span>
       </span>
       <span title="bbox 325 3163 2138 3227" class="ocr_line" id="w_438">
-        <span title="bbox 325 3175 502 3216" class="ocr_word" id="w_430">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">quorum</ins>
-            <del title="nlp 0.90">reliquorum</del>
-          </span>
-        </span>
         <span title="bbox 533 3163 787 3205" class="ocr_word" id="w_431">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">scholiorum</ins>
