--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0086.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0086.html
@@ -1354,7 +1354,7 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 736 1517 957 1564" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[θεωρίμασιν</ins>
+            <ins title="nlp 2.00">θεωρίμασιν</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 985 1519 1076 1563">
@@ -1768,14 +1768,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 354 1871 2180 1918">
-        <span id="w_340_0" class="ocr_word" title="bbox 354 1873 466 1912">
+        <span id="w_340_0_0" class="ocr_word" title="bbox 354 1873 466 1912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;x003C;οὖτος</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὗτος</ins>
           </span>
         </span>
-        <span id="w_340_1" class="ocr_word" title="bbox 354 1873 466 1912">
+        <span id="w_340_0_1" class="ocr_word" title="bbox 354 1873 466 1912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">γαὰ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">γὰρ&amp;#x003Ε;</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 594 1871 729 1917" lang="grc">
@@ -1788,14 +1788,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_344" class="ocr_word" title="bbox 819 1883 986 1917" lang="grc">
+        <span id="w_344_0" class="ocr_word" title="bbox 819 1883 986 1917">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἡδύπονον</ins>
+            <ins class="alt" title="nlp 2.00">[ἡδύτονον</ins>
+          </span>
+        </span>
+        <span id="w_344_1" class="ocr_word" title="bbox 819 1883 986 1917">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1014 1871 1189 1917" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ἡδύτνον</ins>
+            <ins title="nlp 2.00">ἡδύτνον</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1216 1873 1307 1914">
@@ -1832,11 +1837,6 @@
         <span id="w_352" class="ocr_word" title="bbox 1947 1872 2046 1909" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πόνος</ins>
-          </span>
-        </span>
-        <span id="w_353" class="ocr_word" title="bbox 2071 1872 2180 1913" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τόνος</ins>
           </span>
         </span>
       </span>
@@ -2309,9 +2309,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 357 2281 2178 2330">
-        <span id="w_445" class="ocr_word" title="bbox 357 2292 475 2322" lang="grc">
+        <span id="w_445_0" class="ocr_word" title="bbox 357 2292 475 2322">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὰ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὰ</ins>
+          </span>
+        </span>
+        <span id="w_445_1" class="ocr_word" title="bbox 357 2292 475 2322">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 603 2282 692 2326" lang="grc">
@@ -2331,7 +2336,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1051 2281 1233 2324" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπελθεῖν)·</ins>
+            <ins title="nlp 2.00">ἐπελθεῖν&amp;#x003Ε;·</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1259 2283 1300 2316" lang="grc">
@@ -2357,11 +2362,6 @@
         <span id="w_455" class="ocr_word" title="bbox 1821 2284 2030 2330" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσόφοις·</ins>
-          </span>
-        </span>
-        <span id="w_456" class="ocr_word" title="bbox 2058 2283 2178 2329" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐφυλάξατο</ins>
           </span>
         </span>
       </span>
@@ -2391,9 +2391,14 @@
             <ins class="alt" title="nlp 1.00">λέγει</ins>
           </span>
         </span>
-        <span id="w_463" class="ocr_word" title="bbox 1201 2343 1287 2383">
+        <span id="w_463_0" class="ocr_word" title="bbox 1201 2343 1287 2383">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οὖν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_463_1" class="ocr_word" title="bbox 1201 2343 1287 2383">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_464" class="ocr_word" title="bbox 1314 2341 1330 2375" lang="grc">
@@ -2429,11 +2434,6 @@
         <span id="w_470" class="ocr_word" title="bbox 1985 2356 2064 2388" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅπερ</ins>
-          </span>
-        </span>
-        <span id="w_471" class="ocr_word" title="bbox 2091 2342 2178 2387" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὠφεηήθην</ins>
           </span>
         </span>
       </span>
@@ -2475,7 +2475,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1560 2401 1662 2446" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγει</ins>
+            <ins title="nlp 2.00">[λέγει</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 1681 2403 1767 2444">
@@ -2815,7 +2815,7 @@
         </span>
         <span id="w_546" class="ocr_word" title="bbox 1854 2697 1970 2744" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνδρα</ins>
+            <ins title="nlp 2.00">[ἄνδρα</ins>
           </span>
         </span>
         <span id="w_547" class="ocr_word" title="bbox 1989 2696 2176 2741">
@@ -2903,9 +2903,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_563" class="ocr_word" title="bbox 855 2811 999 2850">
+        <span id="w_563_0" class="ocr_word" title="bbox 855 2811 999 2850">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;σαφῶς&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;σαφῶς&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_563_1" class="ocr_word" title="bbox 855 2811 999 2850">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_564" class="ocr_word" title="bbox 1024 2808 1127 2854" lang="grc">
@@ -2946,11 +2951,6 @@
         <span id="w_571" class="ocr_word" title="bbox 1890 2815 2008 2848" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑαυτὸν</ins>
-          </span>
-        </span>
-        <span id="w_572" class="ocr_word" title="bbox 2035 2825 2176 2848" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπαινεῖ</ins>
           </span>
         </span>
       </span>
@@ -3151,7 +3151,7 @@
         </span>
         <span id="w_611" class="ocr_word" title="bbox 2087 2990 2177 3034" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
       </span>
