--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0087.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0087.html
@@ -162,7 +162,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1092 353 1232 405" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1262 367 1332 405" lang="grc">
@@ -395,7 +395,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 748 629 859 682" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 895 644 967 683" lang="grc">
@@ -1861,7 +1861,7 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 556 2357 688 2411" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_364" class="ocr_word" title="bbox 717 2357 836 2409" lang="grc">
@@ -2840,7 +2840,7 @@
       <span class="ocr_line" title="bbox 107 3173 1823 3234">
         <span id="w_545" class="ocr_word" title="bbox 107 3188 256 3233">
           <span class="alternatives">
-            <ins title="nlp 2.00">(σπαρτοί</ins>
+            <ins title="nlp 2.00">σπαρτοί</ins>
           </span>
         </span>
         <span id="w_546" class="ocr_word" title="bbox 279 3201 314 3222" lang="grc">
