--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0088.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0088.html
@@ -245,7 +245,7 @@
       <span class="ocr_line" title="bbox 427 451 2174 510">
         <span id="w_45" class="ocr_word" title="bbox 618 457 755 510" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σοφία</ins>
+            <ins title="nlp 2.00">(σοφία</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 785 471 857 510" lang="grc">
@@ -1500,7 +1500,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 2105 1848 2150 1882">
           <span class="alternatives">
-            <ins title="nlp 2.00">60ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1639,7 +1639,7 @@
         </span>
         <span id="w_323" class="ocr_word" title="bbox 2026 1976 2109 2030" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
       </span>
@@ -1748,7 +1748,7 @@
         </span>
         <span id="w_344" class="ocr_word" title="bbox 1419 2112 1479 2166" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1500 2128 1622 2168" lang="grc">
@@ -2307,7 +2307,7 @@
         </span>
         <span id="w_451" class="ocr_word" title="bbox 673 2789 715 2823">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 ἑαυτ.]</ins>
+            <ins title="nlp 2.00">ἑαυτ.]</ins>
           </span>
         </span>
         <span id="w_452_0" class="ocr_word" title="bbox 740 2789 847 2834">
