--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0027.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0027.html
@@ -243,17 +243,11 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1816 488 1978 529">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iuveni-</ins>
+            <ins title="nlp 2.00">inveniuntur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 160 554 1976 610">
-        <span id="w_40" class="ocr_word" title="bbox 160 560 282 597">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">untuv</ins>
-            <del title="nlp 0.90">iuveniuntuv</del>
-          </span>
-        </span>
         <span id="w_41" class="ocr_word" title="bbox 314 554 475 595">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scholia</ins>
@@ -415,17 +409,11 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1857 707 1978 747">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">prae-</ins>
+            <ins title="nlp 2.00">praepositum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 158 760 1978 816">
-        <span id="w_68" class="ocr_word" title="bbox 158 760 337 816">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">positum</ins>
-            <del title="nlp 0.90">praepositum</del>
-          </span>
-        </span>
         <span id="w_69" class="ocr_word" title="bbox 370 760 414 814">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(f.</ins>
@@ -545,17 +533,11 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1886 846 1977 885">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">per-</ins>
+            <ins title="nlp 2.00">persuasum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 897 1976 952">
-        <span id="w_92" class="ocr_word" title="bbox 157 911 326 939">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suasum</ins>
-            <del title="nlp 0.90">persuasum</del>
-          </span>
-        </span>
         <span id="w_93" class="ocr_word" title="bbox 366 903 430 940">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est</ins>
@@ -612,17 +594,11 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1852 899 1976 941">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inter-</ins>
+            <ins title="nlp 2.00">interpretatio</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 965 1975 1021">
-        <span id="w_103" class="ocr_word" title="bbox 156 967 338 1021">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pretatio</ins>
-            <del title="nlp 0.90">interpretatio</del>
-          </span>
-        </span>
         <span id="w_104" class="ocr_word" title="bbox 391 980 443 1009">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -1314,7 +1290,7 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1821 1654 1972 1695">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scholi-</ins>
+            <ins title="nlp 2.00">scholiastae</ins>
           </span>
         </span>
       </span>
@@ -1486,17 +1462,11 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1899 1873 1972 1913">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ap-</ins>
+            <ins title="nlp 2.00">apparere</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 153 1927 1970 1984">
-        <span id="w_255" class="ocr_word" title="bbox 153 1942 303 1982">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">parere</ins>
-            <del title="nlp 0.90">apparere</del>
-          </span>
-        </span>
         <span id="w_256" class="ocr_word" title="bbox 349 1930 516 1972">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">videtur</ins>
@@ -1597,17 +1567,11 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1840 1996 1970 2050">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">speci-</ins>
+            <ins title="nlp 2.00">specimina</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 152 2065 1466 2121">
-        <span id="w_273" class="ocr_word" title="bbox 152 2065 265 2106">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">miua</ins>
-            <del title="nlp 0.90">specimiua</del>
-          </span>
-        </span>
         <span id="w_274" class="ocr_word" title="bbox 296 2081 348 2108">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -2062,16 +2026,11 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1763 2379 1968 2412" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγορου-</ins>
+            <ins title="nlp 2.00">κατηγορουμένων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 149 2427 1967 2476">
-        <span id="w_359" class="ocr_word" title="bbox 149 2432 255 2472" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένων</ins>
-          </span>
-        </span>
         <span id="w_360" class="ocr_word" title="bbox 283 2432 324 2464" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
