--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0203.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0203.html
@@ -391,7 +391,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1815 874 1905 909">
           <span class="alternatives">
-            <ins title="nlp 2.00">246ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
