--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0204.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0204.html
@@ -714,7 +714,7 @@
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1944 1017 2064 1071" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(περιέχει</ins>
+            <ins title="nlp 2.00">περιέχει</ins>
           </span>
         </span>
       </span>
