--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0205.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0205.html
@@ -68,7 +68,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1847 142 1926 183">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1G5</ins>
+            <ins title="nlp 2.00">165</ins>
           </span>
         </span>
       </span>
@@ -373,7 +373,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 407 768 578 821" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πρῶτον</ins>
+            <ins title="nlp 2.00">πρῶτον</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 608 781 680 819" lang="grc">
@@ -656,7 +656,7 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1835 1041 1923 1076" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">247ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1277,9 +1277,9 @@
             <ins class="alt" title="nlp 1.00">προστίθησιν,</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1769 2191 1857 2247">
+        <span id="w_242_0" class="ocr_word" title="bbox 1769 2191 1857 2247">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;ὡς&amp;#003E;</ins>
           </span>
         </span>
       </span>
