--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0206.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0206.html
@@ -480,7 +480,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 822 906 898 960" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῷ</ins>
+            <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 931 919 1004 959" lang="grc">
