--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0116.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0116.html
@@ -124,16 +124,11 @@
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1973 258 2120 284" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰδικώ-</ins>
+            <ins title="nlp 2.00">εἰδικώτατον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 439 314 2118 371">
-        <span id="w_24" class="ocr_word" title="bbox 439 330 550 355" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τατον</ins>
-          </span>
-        </span>
         <span id="w_25" class="ocr_word" title="bbox 597 329 811 368" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπεγράφη,</ins>
@@ -566,9 +561,9 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_108" class="ocr_word" title="bbox 2115 723 2181 760">
+        <span id="w_108_0" class="ocr_word" title="bbox 2115 723 2181 760">
           <span class="alternatives">
-            <ins title="nlp 2.00">80ν</ins>
+            <ins class="alt" title="nlp 2.00">80v</ins>
           </span>
         </span>
       </span>
@@ -1485,9 +1480,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1115 2030 1436 2088">
-        <span id="w_287" class="ocr_word" title="bbox 1115 2030 1306 2087" lang="grc">
+        <span id="w_287_0" class="ocr_word" title="bbox 1115 2030 1306 2087">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κη΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;πρὰξις</ins>
+          </span>
+        </span>
+        <span id="w_287_1" class="ocr_word" title="bbox 1115 2030 1306 2087">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κη'&amp;003E;</ins>
           </span>
         </span>
       </span>
@@ -1520,14 +1520,24 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 923 2277 1089 2312" lang="grc">
+        <span id="w_294_0" class="ocr_word" title="bbox 923 2277 1089 2312">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κοινῶς</ins>
+            <ins class="alt" title="nlp 2.00">κοινῶς</ins>
           </span>
         </span>
-        <span id="w_295" class="ocr_word" title="bbox 1121 2272 1184 2327" lang="grc">
+        <span id="w_294_1" class="ocr_word" title="bbox 923 2277 1089 2312">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τε καὶ ἰδίως&amp;#x003Ε; καὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;τε</ins>
+          </span>
+        </span>
+        <span id="w_295_0" class="ocr_word" title="bbox 1121 2272 1184 2327">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_295_1" class="ocr_word" title="bbox 1121 2272 1184 2327">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἰδίως&amp;x003E;</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 1594 2275 1829 2315" lang="grc">
@@ -1537,7 +1547,7 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 2124 2274 2173 2310">
           <span class="alternatives">
-            <ins title="nlp 2.00">81Ι</ins>
+            <ins title="nlp 2.00">Ι</ins>
           </span>
         </span>
       </span>
@@ -2029,7 +2039,7 @@
         </span>
         <span id="w_387" class="ocr_word" title="bbox 689 2855 735 2896" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(αι</ins>
+            <ins title="nlp 2.00">αι</ins>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 760 2856 943 2898">
