--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0207.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0207.html
@@ -1113,7 +1113,7 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1799 1419 1858 1472" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
       </span>
@@ -1242,7 +1242,7 @@
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1830 1562 1920 1599">
           <span class="alternatives">
-            <ins title="nlp 2.00">248ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
