--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0208.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0208.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 288 115 1751 162">
         <span id="w_0" class="ocr_word" title="bbox 288 120 367 162">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1G8</ins>
+            <ins title="nlp 2.00">168</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 637 118 769 151">
@@ -101,7 +101,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 555 465 654 507">
           <span class="alternatives">
-            <ins title="nlp 2.00">Tῶν</ins>
+            <ins title="nlp 2.00">ῶν</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 702 481 750 506" lang="grc">
@@ -2260,8 +2260,7 @@
         </span>
         <span id="w_429" class="ocr_word" title="bbox 1023 3084 1088 3107">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oia.</ins>
-            <del title="nlp 0.90">oia.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 1116 3075 1175 3107">
